--- a/src/Timeline/Timeline.css
+++ b/src/Timeline/Timeline.css
@@ -1,5 +1,6 @@
 .timeline-wrapper{
     width: 100%;
+    height: 94vh;
     display: flex;
     flex-direction: column;
 }
@@ -15,11 +16,12 @@
 }
 .items-content-wrapper {
     display: flex;
+    height: 100%;
+    background-color: aqua;
     gap:0px;
     overflow-x: auto;
     scrollbar-color: transparent transparent;
     user-select: none;
-    background-color: transparent;
 }
 
 .time-labels-wrapper::-webkit-scrollbar{}
