--- a/src/Timeline/Timeline.css
+++ b/src/Timeline/Timeline.css
@@ -17,7 +17,7 @@
 .items-content-wrapper {
     display: flex;
     height: 100%;
-    background-color: aqua;
+    background-color: transparent;
     gap:0px;
     overflow-x: auto;
     scrollbar-color: transparent transparent;
